--- a/bakhroush_custom_report/views/move.xml
+++ b/bakhroush_custom_report/views/move.xml
@@ -5,6 +5,10 @@
         <field name="model">account.move</field>
         <field name="inherit_id" ref="account.view_move_form"/>
         <field name="arch" type="xml">
+            <xpath expr="//field[@name='payment_term_id']" position="after">
+                <field name="picking_id"/>
+                <field name="sale_id"/>
+            </xpath>
             <xpath expr="//field[@name='payment_term_id']" position="attributes">
                 <attribute name="required">1</attribute>
                 <attribute name="domain">[('allowed_users', 'in', uid)]</attribute>
