--- a/bakhroush_custom_report/views/payment_terms.xml
+++ b/bakhroush_custom_report/views/payment_terms.xml
@@ -7,7 +7,10 @@
         <field name="arch" type="xml">
             <xpath expr="//field[@name='company_id']" position="after">
                <field name="allowed_users" widget="many2many_tags"/>
+               <field name="force_invoice"/>
+                <field name="default_cash_payment" attrs= "{'invisible':[('force_invoice','=', False)],'required':[('force_invoice','=', True)]}"/>
             </xpath>
         </field>
     </record>
+
 </odoo>
