--- a/bakhroush_custom_report/views/product_view.xml
+++ b/bakhroush_custom_report/views/product_view.xml
@@ -12,5 +12,15 @@
                 </field>
             </field>
         </record>
+        <record id="product_template_tree_view" model="ir.ui.view">
+            <field name="name">product.template.product.form</field>
+            <field name="model">product.template</field>
+            <field name="inherit_id" ref="product.product_template_tree_view"/>
+            <field name="arch" type="xml">
+                <field name="categ_id" position="after">
+                   <field name="branch_id" widget="many2many_tags"/>
+                </field>
+            </field>
+        </record>
     </data>
 </odoo>
