--- a/bakhroush_custom_report/views/data.xml
+++ b/bakhroush_custom_report/views/data.xml
@@ -9,6 +9,11 @@
         <field name="name">Contact Manager</field>
         <field name="users" eval="[(4, ref('base.user_root')),(4, ref('base.user_admin'))]"/>
     </record>
+    <record model="ir.ui.menu" id="contacts.menu_contacts">
+      <field name="groups_id" eval="[(6,0,[ref('bakhroush_custom_report.group_contact_manager')])]"/>
+    </record>
+
+
     <record id="group_scrap_manager" model="res.groups">
         <field name="name">Allow Scrap</field>
         <field name="users" eval="[(4, ref('base.user_root')),(4, ref('base.user_admin'))]"/>
@@ -17,11 +22,6 @@
         <field name="name">Allow Return</field>
         <field name="users" eval="[(4, ref('base.user_root')),(4, ref('base.user_admin'))]"/>
     </record>
-    <record model="ir.ui.menu" id="contacts.menu_contacts">
-        <field name="groups_id"
-               eval="[(6,0,[ref('base.group_user'),ref('bakhroush_custom_report.group_contact_manager')])]"/>
-    </record>
-
     <record model="ir.rule" id="stock.stock_picking_rule">
         <field name="name">stock_picking multi-company</field>
         <field name="model_id" search="[('model','=','stock.picking')]" model="ir.model"/>
