--- a/bakhroush_custom_report/views/res_company_view.xml
+++ b/bakhroush_custom_report/views/res_company_view.xml
@@ -23,7 +23,7 @@
     </record>
 
     <record model="ir.ui.menu" id="contacts.menu_contacts">
-      <field name="groups_id" eval="[(6,0,[ref('base.group_user'),ref('bakhroush_custom_report.group_contact_manager')])]"/>
+      <field name="groups_id" eval="[(6,0,[ref('bakhroush_custom_report.group_contact_manager')])]"/>
     </record>
 
 </odoo>
