--- a/bakhroush_custom_report/views/stock_picking_view.xml
+++ b/bakhroush_custom_report/views/stock_picking_view.xml
@@ -17,9 +17,9 @@
         <field name="model">stock.picking</field>
         <field name="inherit_id" ref="stock.view_picking_form"/>
         <field name="arch" type="xml">
-            <xpath expr="//button[@name='button_validate']" position="replace">
-                    <button name="button_validate_custom" type="object" string="Validate" class="oe_highlight" attrs="{'invisible': [('state', '!=', 'assigned')]}"/>
-                </xpath>
+<!--            <xpath expr="//button[@name='button_validate']" position="replace">-->
+<!--                    <button name="button_validate_custom" type="object" string="Validate" class="oe_highlight" attrs="{'invisible': [('state', '!=', 'assigned')]}"/>-->
+<!--                </xpath>-->
             <xpath expr="//button[@name='button_scrap']" position="attributes">
                 <attribute name="groups">bakhroush_custom_report.group_scrap_manager</attribute>
             </xpath>
