--- a/bakhroush_custom_report/views/data.xml
+++ b/bakhroush_custom_report/views/data.xml
@@ -12,7 +12,10 @@
     <record model="ir.ui.menu" id="contacts.menu_contacts">
       <field name="groups_id" eval="[(6,0,[ref('bakhroush_custom_report.group_contact_manager')])]"/>
     </record>
-
+    <record id="group_inventory_adjustment_manager" model="res.groups">
+        <field name="name">Inventory Adjustment Manager</field>
+        <field name="users" eval="[(4, ref('base.user_root')),(4, ref('base.user_admin'))]"/>
+    </record>
 
     <record id="group_scrap_manager" model="res.groups">
         <field name="name">Allow Scrap</field>
