[add] Invoice template updates

--- a/saudi_vat_invoice_print/views/invoice.xml
+++ b/saudi_vat_invoice_print/views/invoice.xml
@@ -16,7 +16,7 @@
                     <group>
                         <field name="amount_text"/>
                         <field name="amount_in_ar"/>
-                        <field name="qr_image" widget="image"/>
+<!--                        <field name="qr_image" widget="image"/>-->
                     </group>
                 </page>
 
