--- a/saudi_vat_invoice_print/reports/report_saudi_invoice.xml
+++ b/saudi_vat_invoice_print/reports/report_saudi_invoice.xml
@@ -714,9 +714,8 @@
                                 </td>
                                 <td rowspan="5"
                                     style="text-align:center;vertical-align:middle;width:25%;padding:2px;border-right: 1px solid black;border-left: 1px solid black;border-top: 1px solid black;border-bottom: 1px solid black;">
-                                    <!--                                    <img t-if="doc.qr_image" t-att-src="'data:image/png;base64,%s' % to_text(doc.qr_image)"-->
-                                    <!--                                     style="max-height: 120px;align:center"/>-->
-                                    <!--                                    <img t-att-src="'/report/barcode/?type=QR&amp;width=400&amp;height=400&amp;value=' +doc.generate_tlv_code()" style="width:120px;height:120px"/>-->
+                                    <img t-att-src="'/report/barcode/?type=QR&amp;width=400&amp;height=400&amp;value=' +doc.generate_tlv_code()"
+                                                     style="width:110px;height:90px"/>
                                 </td>
                             </tr>
                             <tr>
