--- a/amcl_global_discount/views/invoice_view.xml
+++ b/amcl_global_discount/views/invoice_view.xml
@@ -7,7 +7,7 @@
             <field name="model">account.move</field>
             <field name="inherit_id" ref="account.view_move_form"/>
             <field name="arch" type="xml">
-                <xpath expr="//page[@id='invoice_tab']/group[1]" position="inside">
+                <field name="narration" position="before">
                     <group class="oe_left oe_inline" name="discount">
                         <label for="discount_type"/>
                         <field name="discount_type" nolabel="1" class="oe_subtotal_footer_separator"
@@ -17,15 +17,8 @@
                                attrs="{'readonly': ['|',('state','!=','draft'),('invoice_origin','!=',False)]}"
                                context="{'discount_rate':discount_rate}" class="oe_subtotal_footer_separator"/>
                     </group>
-                </xpath>
-                <!--  replace narration field to display proper in a view-->
-                <xpath expr="//page[@id='invoice_tab']/group[1]/group[1]" position="replace"/>
-                <xpath expr="//page[@id='invoice_tab']/group" position="inside">
-                    <group colspan="3">
-                        <field name="narration" placeholder="Terms and Conditions" class="oe_inline" nolabel="1"/>
-                    </group>
-                </xpath>
-                <field name="tax_totals_json" position="after">
+                </field>
+                <field name="amount_total" position="after">
                     <field name="discount" widget="monetary"/>
                     <div class="oe_subtotal_footer_separator oe_inline o_td_label">
                     </div>
