--- a/amcl_global_discount/views/sale_view.xml
+++ b/amcl_global_discount/views/sale_view.xml
@@ -18,7 +18,7 @@
                                attrs="{'readonly': [('state','!=','draft')]}"/>
                     </group>
                 </field>
-                <field name="tax_totals_json" position="after">
+                <field name="amount_total" position="after">
                     <field name="discount" widget="monetary"/>
                     <div class="oe_subtotal_footer_separator oe_inline o_td_label">
                     </div>
