--- a/bakhroush_custom_report/views/stock_picking_view.xml
+++ b/bakhroush_custom_report/views/stock_picking_view.xml
@@ -57,7 +57,7 @@
                     <field name="method"/>
                     <field name="corresponding"/>
                     <field name="car_no"/>
-                    <field name="driver_name" required="1"/>
+                    <field name="driver_name"/>
 <!--                    <field name="dummy_driver_name" widget="many2many_tags"/>-->
                     <field name="balance_amount"/>
                     <field name="picking_total_value"/>
@@ -211,7 +211,7 @@
 
     <menuitem action="stock.action_inventory_form" id="stock.menu_action_inventory_form" parent="bakhroush_custom_report.group_inventory_adjustment_manager" sequence="30"/>
 
-    <record id="stock_picking_type_action" model="ir.actions.act_window">
+    <record id="stock.stock_picking_type_action" model="ir.actions.act_window">
             <field name="name">Inventory Overview</field>
             <field name="res_model">stock.picking.type</field>
             <field name="type">ir.actions.act_window</field>
