--- a/bakhroush_custom_report/report/delivery_concreate_dotmatrix_report.xml
+++ b/bakhroush_custom_report/report/delivery_concreate_dotmatrix_report.xml
@@ -22,76 +22,76 @@
     <template id="report_delivery_document_concrete_bakhroush">
         <t t-call="web.html_container">
             <t t-call="bakhroush_custom_report.external_layout_bakhroush">
-                <t t-set="o" t-value="o.with_context(lang=o.partner_id.lang)"/>
+                <t t-set="o" t-value="o.with_context(lang='en_US')"/>
 
                 <div class="page">
-                    <table style="font-family:Calibri;font-size: 13px;border-collapse: collapse;">
-                        <tr style="height:10mm;">
-<!--                            Invoice No.-->
+                    <table style="font-family:Calibri;font-size: 13px;font-weight: bold;border-collapse: collapse;">
+                        <tr style="height:11mm;">
+                            <!--Invoice No.-->
                             <td style="width:30mm;text-align:right;"/>
                             <td style="width:53mm;text-align:center;"><span t-field="o.invoice_no"/></td>
                             <td style="width:40mm;text-align:right;"/>
 
                             <td style="width:80mm;text-align:center;font-size: 15px;font-weight:bold;"/>
-<!--                            S.no-->
+                            <!--S.no-->
                             <td style="width:60mm;text-align:center;"><span t-field="o.name"/></td>
                             <td style="width:30mm;text-align:right;"/>
                         </tr>
-                        <tr style="height:10mm;">
-<!--                            Bulding No.-->
+                        <tr style="height:11mm;">
+                            <!--Bulding No.-->
                             <td style="width:30mm;text-align:right;"/>
                             <td style="width:53mm;text-align:center;"><span t-field="o.building_permit_no"/></td>
                             <td style="width:40mm;text-align:right;"/>
 
                             <td style="width:80mm;text-align:center;font-size: 15px;font-weight:bold;"/>
-<!--                            Corresponding-->
+                            <!--Corresponding-->
                             <td style="width:60mm;text-align:center;"><span t-field="o.scheduled_date"/></td>
                             <td style="width:30mm;text-align:right;"/>
                         </tr>
-                        <tr style="height:10mm;">
-<!--                            Mobile No.-->
+                        <tr style="height:11mm;">
+                            <!--Mobile No.-->
                             <td style="width:30mm;text-align:right;"/>
                             <td style="width:53mm;text-align:center;"><span t-field="o.type_of_use"/></td>
                             <td style="width:40mm;text-align:right;"/>
 
                             <td style="width:80mm;text-align:center;font-size: 20px;font-weight:bold;"/>
-<!--                            Delivery No.-->
+                            <!--Delivery No.-->
                             <td style="width:60mm;text-align:center;"><span t-field="o.scheduled_date"/></td>
                             <td style="width:30mm;text-align:right;"/>
                         </tr>
 
-                        <tr style="height:10mm;">
-<!--                            Mixing Time-->
+                        <tr style="height:11mm;">
+                            <!--Mixing Time-->
                             <td style="width:30mm;text-align:right;"/>
                             <td style="width:53mm;text-align:center;"><span t-field="o.mixing_time"/></td>
                             <td style="width:40mm;text-align:right;"/>
-<!--                            Cust. Name-->
+                            <!--Cust. Name-->
                             <td colspan="2" style="width:67mm;text-align:center;"><span t-field="o.partner_id.name"/></td>
                             <td style="width:30mm;text-align:right;"/>
                         </tr>
 
-                        <tr style="height:10mm;">
-<!--                            Time Out-->
+                        <tr style="height:11mm;">
+                            <!--Time Out-->
                             <td style="width:30mm;text-align:right;"/>
                             <td style="width:53mm;text-align:center;"><span t-field="o.load_time_mixer"/></td>
                             <td style="width:40mm;text-align:right;"/>
-<!--                            Car No.-->
+                            <!--Car No.-->
                             <td colspan="2" style="width:67mm;text-align:center;"><span t-field="o.car_no"/></td>
                             <td style="width:30mm;text-align:right;"/>
                         </tr>
 
-                        <tr style="height:10mm;">
-<!--                            Received Time-->
+                        <tr style="height:11mm;">
+                            <!--Received Time-->
                             <td style="width:30mm;text-align:right;"/>
                             <td style="width:53mm;text-align:center;"><span t-field="o.received_time"/></td>
                             <td style="width:40mm;text-align:right;"/>
-<!--                            Driver Name-->
+                            <!--Driver Name-->
                             <td colspan="2" style="width:67mm;text-align:center;"><span t-field="o.driver_name"/></td>
                             <td style="width:30mm;text-align:right;"/>
                         </tr>
                     </table>
 
-                    <table style="font-family:Calibri;font-size: 13px;border-collapse: collapse;">
+                    <table style="font-family:Calibri;font-size: 13px;font-weight: bold;border-collapse: collapse;">
                         <tr>
                             <td style="width:23mm;text-align:center;"><br/><br/><br/><br/></td>
                             <td style="width:13mm;text-align:center;"><br/><br/><br/><br/></td>
@@ -139,10 +139,14 @@
                                     <span t-field="move.quantity_of_cement"/>
                                 </td>
                                 <td class="text-center">
-                                    <span t-field="move.opc"/>
+                                    <t t-if="move.opc">
+                                      <span class="fa fa-check"/>
+                                    </t>
                                 </td>
                                 <td class="text-center">
-                                    <span t-field="move.src"/>
+                                    <t t-if="move.src">
+                                      <span class="fa fa-check"/>
+                                    </t>
                                 </td>
                              </tr>
                         </tbody>
