--- a/bakhroush_custom_report/report/delivery_concreate_dotmatrix_report.xml
+++ b/bakhroush_custom_report/report/delivery_concreate_dotmatrix_report.xml
@@ -25,7 +25,7 @@
                 <t t-set="o" t-value="o.with_context(lang='en_US')"/>
 
                 <div class="page">
-                    <table style="font-family:Calibri;font-size: 13px;font-weight: bold;border-collapse: collapse;">
+                    <table style="font-family:Odoo Unicode Support Noto;font-size: 16px;font-weight: bold;border-collapse: collapse;">
                         <tr style="height:11mm;">
                             <!--Invoice No.-->
                             <td style="width:30mm;text-align:right;"/>
@@ -91,7 +91,7 @@
                         </tr>
                     </table>
 
-                    <table style="font-family:Calibri;font-size: 13px;font-weight: bold;border-collapse: collapse;">
+                    <table style="font-family:Odoo Unicode Support Noto;font-size: 16px;font-weight: bold;border-collapse: collapse;">
                         <tr>
                             <td style="width:23mm;text-align:center;"><br/><br/><br/><br/></td>
                             <td style="width:13mm;text-align:center;"><br/><br/><br/><br/></td>
