--- a/print_journal_entires/report/report_menu.xml
+++ b/print_journal_entires/report/report_menu.xml
@@ -4,6 +4,7 @@
         <t t-call="web.html_container">
 			<t t-call="web.external_layout">
 				<t t-foreach="docs" t-as="o">
+                    <t t-set="lang" t-value="o.env.context.get('lang')"/>
 					<div class="page" style="font-size:15px;">
 						<div>
 							<h3>
@@ -13,23 +14,41 @@
 						<br></br>
 						<div class="row">
 							<table width="100%" class="table-bordered">
-							
-								<tr>
-									<td>Journal: <span t-field="o.journal_id.name" />
-									</td>
-									<td>
-										Date: <span t-field="o.date"/>
-									</td>
-								</tr>
-								<tr>
-									<td>
-										Partner: <span t-field="o.partner_id.name"/>
-									</td>
-									<td>
-										Reference: <span t-field="o.ref"/>
-									</td>
-								</tr>
-							</table>                	
+							     <t t-if="lang == 'ar_001'">
+    								<tr>
+    									<td>دفتر اليومية: <span t-field="o.journal_id.name" />
+    									</td>
+    									<td>
+    										التاريخ: <span t-field="o.date"/>
+    									</td>
+    								</tr>
+    								<tr>
+    									<td>
+    										المعني: <span t-field="o.partner_id.name"/>
+    									</td>
+    									<td>
+    										المرجع: <span t-field="o.ref"/>
+    									</td>
+    								</tr>
+							    </t>
+                                <t t-else="">
+                                    <tr>
+                                        <td>Journal: <span t-field="o.journal_id.name" />
+                                        </td>
+                                        <td>
+                                            Date: <span t-field="o.date"/>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            Partner: <span t-field="o.partner_id.name"/>
+                                        </td>
+                                        <td>
+                                            Reference: <span t-field="o.ref"/>
+                                        </td>
+                                    </tr>
+                                </t>
+							</table>
 						</div>
 						<br></br>
 						<br></br>
@@ -48,15 +67,28 @@
 							<br></br>
 							<table width="100%" class="border-collapse:separate; aztblbordr">
 								<thead >
-									<tr>
-										<th>Account</th>
-										<th>Date</th>
-										<th>Partner</th>
-										<th>Lable</th>
-										<th>Analytic Account</th>
-										<th>Debit</th>
-										<th>Credit</th>
-									</tr>
+                                    <t t-if="lang == 'ar_001'">
+                                        <tr>
+                                            <th>الحساب</th>
+                                            <th>التاريخ</th>
+                                            <th>المعني</th>
+                                            <th>الوصف</th>
+                                            <th>الحسابات التحليلية</th>
+                                            <th>المدين</th>
+                                            <th>الدائن</th>
+                                        </tr>
+                                    </t>
+                                    <t t-else="">
+    									<tr>
+    										<th>Account</th>
+    										<th>Date</th>
+    										<th>Partner</th>
+    										<th>Lable</th>
+    										<th>Analytic Account</th>
+    										<th>Debit</th>
+    										<th>Credit</th>
+    									</tr>
+                                    </t>
 								</thead>
 								<tbody>
 									<t t-set="dr_total" t-value="0"/>
@@ -93,9 +125,16 @@
 										<td/>
 										<td/>
 										<td/>
-										<td>
-											Total
-										</td>
+                                        <t t-if="lang == 'ar_001'">
+    										<td>
+    											إجماليات
+    										</td>
+                                        </t>
+                                        <t t-else="">
+                                            <td>
+                                                Totals
+                                            </td>
+                                        </t>
 										<td>
 											<span t-esc="dr_total" t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>
 										</td>
